--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -28,7 +28,7 @@
       </header>
 
       <section class="conclusao">
-        <h2 class="aluno">Juliana Negreiros</h2>
+        <h2 class="aluno">Ana Beatriz Abou Said</h2>
 
         <p class="conclusao-texto">
           Você concluiu a
@@ -44,7 +44,7 @@
             outros cursos de desenvolvimento de jogos na Alura
           </a>.
         </p>
-        <iframe src="https://editor.p5js.org/alura/embed/DtcUcnUnh"></iframe>
+        <iframe src="https://editor.p5js.org/BeatrizAbou/embed/WcYH5nX3V"></iframe>
       </section>
 
       <footer class="assinaturas">
